--- a/USTHWeather/app/src/main/res/values/strings.xml
+++ b/USTHWeather/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">USTH Weather</string>
+    <string name="description">Weather prediction description goes here</string>
+    <string-array name ="days">
+        <item name="monday" type="string">Monday</item>
+        <item name="tuesday" type="string">Tuesday</item>
+        <item name="wednesday" type="string">Wednesday</item>
+        <item name="thursday" type="string">Thursday</item>
+        <item name="friday" type="string">Friday</item>
+        <item name="saturday" type="string">Saturday</item>
+        <item name="sunday" type="string">Sunday</item>
+    </string-array>>
 </resources>
