--- a/USTHWeather/app/src/main/res/values/strings.xml
+++ b/USTHWeather/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">USTH Weather</string>
     <string name="description">Weather prediction description goes here</string>
+    <string name="refresh">Refresh</string>
     <string-array name ="days">
         <item name="monday" type="string">Monday</item>
         <item name="tuesday" type="string">Tuesday</item>
@@ -17,5 +18,6 @@
     </string-array>
     <string name="weather_desc">12C \n Cloudy</string>
     <string name="weather_loc">Paris</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
